<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/what_would_you_like_to_exercise_today"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDashboardGym"
        android:layout_width="121dp"
        android:layout_height="105dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/dashboard_gym"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <!--
        line "app:srcCompat="@drawable/dashboard_gym_icon" />" caused linked failed on project
        app:srcCompat="@drawable/dashboard_gym_icon" />
        -->

    <ImageView
        android:id="@+id/imgDashboardRunning"
        android:layout_width="124dp"
        android:layout_height="108dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/dashboard_running"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgDashboardGym"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imgDashboardGym"
        app:layout_constraintTop_toBottomOf="@+id/imgDashboardGym"
        app:layout_constraintVertical_bias="1.0"/>
        <!--
        app:srcCompat="@drawable/dashboard_running_icon" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>